@@ -429,11 +429,7 @@ class TestdbAccess(unittest.TestCase):
     self.assertFalse(self.db_instance.CheckMaintenanceFlag())
     self.db_instance.StartTransaction()
     cursor = self.db_instance.connection.cursor()
-    try:
-      cursor.execute(
-          'UPDATE locks SET locked = 1 WHERE lock_name = "maintenance"')
-    finally:
-      cursor.close()
+    self.core_instance.SetMaintenanceFlag(True)
     self.db_instance.EndTransaction()
 
     self.assertTrue(self.db_instance.CheckMaintenanceFlag())
